fw bold al contacto

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <footer>
     <div class="p-3 mb-2 bg-dark text-white">
-    <p class="d-flex justify-content-center fs-3"> CONTACTO</p>
+    <p class="d-flex justify-content-center fs-3 fw-bold"> CONTACTO</p>
 <hr>
     <br><br>
     <div class="d-flex flex-row mb-3 grid gap-1 row-gap-5 m-5">
@@ -190,7 +190,7 @@
     
     
     <hr>
-    <p class="d-flex justify-content-center">© 2024 Todos los derechos reservados</p>
+    <p class="d-flex justify-content-center fw-bold">© 2024 Todos los derechos reservados</p>
 </div>
 </div>
 </footer>
