fw-bold al h1 del nombre al principio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <div class="fondo01"></div>
         <div class="overlay">
-        <h1 class="text-white">BERNARDO GAETE CANCINO</h1>
+        <h1 class="text-white fw-bold">BERNARDO GAETE CANCINO</h1>
         <h2>CURRICULUM VITAE</h2>
         </div>
         
